--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,10 +9,15 @@ html
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
   body
     block content 
-  
-footer.footer 
-.container 
-p.text-muted Geolocation@2021
+    nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
+      a.navbar-brand(href='#') Geolocation
+      ul.navbar-nav.mr-auto 
+        li.nav-item.active 
+          a.nav-link(href='#') Home
+
+footer.footer.fixed-bottom
+  .container 
+    p.text-muted Geolocation@2021
     
   |
   
