--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,13 +9,14 @@ html
   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
   body
-    block content 
-    nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
-      a.navbar-brand(href='#') Geolocation
-      ul.navbar-nav.mr-auto 
-        li.nav-item.active 
-          a.nav-link(href='#') Home
-
+  block content 
+  nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
+    a.navbar-brand(href='#') Geolocation
+    ul.navbar-nav.mr-auto 
+      li.nav-item.active 
+        a.nav-link(href='#') Home
+  h1= title
+  p Welcome to #{title}
 footer.footer.fixed-bottom
   .container 
     p.text-muted Geolocation © 2021
