--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,20 +6,21 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/sticky-footer.css')
     script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous')
-  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
+
   body
   block content 
-  nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
+  nav.navbar.navbar-expand-md.navbar-dark.bg-dark.navbar-static-top
     a.navbar-brand(href='#') Geolocation
     ul.navbar-nav.mr-auto 
       li.nav-item.active 
         a.nav-link(href='#') Home
-  h1= title
-  p Welcome to #{title}
-footer.footer.fixed-bottom
-  .container 
-    p.text-muted Geolocation © 2021
+  div.myheader
+    h1= title
+    p Welcome to #{title}
+footer.footer.mt-auto.py-3.fixed-bottom
+  .container
+    span.text-muted Geolocation © 2021
     
   |
   
