--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,26 +1,33 @@
 doctype html
-html
+html(lang='en',class='h-100')
   head
-    title= 'Geolocation'
-    link(rel="stylesheet", href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')    
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/sticky-footer.css')
-    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
+      meta(charset='utf-8')
+      meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+      meta(name='description', content='')
+      meta(name='author', content='Viorel Popa, Catalin Piscureanu')
+      title='Geolocation'
 
-  body
-  block content 
+  link(rel="stylesheet", href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')    
+  link(rel='stylesheet', href='/stylesheets/style.css')
+  link(rel='stylesheet', href='/stylesheets/sticky-footer.css')
+block content
+
+header
   nav.navbar.navbar-expand-md.navbar-dark.bg-dark.navbar-static-top
     a.navbar-brand(href='#') Geolocation
-    ul.navbar-nav.mr-auto 
-      li.nav-item.active 
-        a.nav-link(href='#') Home
-  div.myheader
-    h1= title
-    p Welcome to #{title}
+    .navbarCollapse.navbar-collapse#navbarCollapse
+      ul.navbar-nav.mr-auto 
+        li.nav-item.active 
+          a.nav-link(href='#') Home
+    
+      
+
+
+
 footer.footer.mt-auto.py-3.fixed-bottom
   .container
     span.text-muted Geolocation © 2021
     
   |
-  
+script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
