Fix 404, fix path

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,8 @@
 extends layout
-
-
 block content
-    .container 
-        h1.mt-5 Express
+ 
+ body
+
+ 
+    h1.mt-5 Express
         p.lead Welcome to #{title}
