--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,18 +8,18 @@ html(lang='en',class='h-100')
       title='Geolocation'
 
   link(rel="stylesheet", href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')    
-  link(rel='stylesheet', href='/stylesheets/style.css')
-  link(rel='stylesheet', href='/stylesheets/sticky-footer.css')
+  link(rel='stylesheet', href='../../stylesheets/style.css')
+  link(rel='stylesheet', href='../../stylesheets/sticky-footer.css')
 block content
-
-header
-  nav.navbar.navbar-expand-md.navbar-dark.bg-dark.navbar-static-top
-    a.navbar-brand(href='#') Geolocation
-    .navbarCollapse.navbar-collapse#navbarCollapse
-      ul.navbar-nav.mr-auto 
-        li.nav-item.active 
-          a.nav-link(href='#') Home
-    
+body
+    header
+      nav.navbar.navbar-expand-md.navbar-dark.bg-dark.navbar-static-top
+          a.navbar-brand(href='#') Geolocation
+          .navbarCollapse.navbar-collapse#navbarCollapse
+           ul.navbar-nav.mr-auto 
+              li.nav-item.active 
+                  a.nav-link(href='#') Home
+      
       
 
 
