--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,12 @@
 extends layout
 block content
- 
+ head 
+    title='Geolocation'
  body
 
- 
-    h1.mt-5 Express
+
+    h1.mt-5 Geolocation
         p.lead Welcome to #{title}
+        p 
+            input(type="text" name="adress" placeholder="Please enter the name of the city")
+            input(type="submit")
