--- a/public/stylesheets/sticky-footer.css
+++ b/public/stylesheets/sticky-footer.css
@@ -1,12 +1,14 @@
 
 main > .container {
     padding: 60px 15px 0;
-    background-color: aqua;
   }
   
   .footer {
     background-color: #f5f5f5;
-   }
+    position: fixed;
+    bottom: 0;
+    height: 60px;
+    }
   
   .footer > .container {
     padding-right: 15px;
