Fix navbar links

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,11 +14,11 @@ html(lang='en',class='h-100')
   block body
     body.d-flex.flex-column.h-100
       nav.navbar.navbar-expand-md.navbar-dark.bg-dark.navbar-static-top
-            a.navbar-brand(href='#') Geolocation
+            a.navbar-brand(href='/') Geolocation
             .navbarCollapse.navbar-collapse#navbarCollapse
               ul.navbar-nav.mr-auto 
                   li.nav-item.active 
-                    a.nav-link(href='#') Home
+                    a.nav-link(href='/') Home
                     
   footer.footer.mt-auto.py-3.fixed-bottom
     .container
