--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,6 @@
 extends layout
 
-block content
-  h1= message
-  h2= error.status
+block page
+  h1(class='mt-5') #{message}
+  h2 #{error.status}
   pre #{error.stack}
