--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,26 +1,36 @@
 doctype html
-html
+html(lang='en' class='h-100')
   head
+    meta(charset='utf-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content='')
+    meta(name='author' content='Mark Otto, Jacob Thornton, and Bootstrap contributors')
+    meta(name='generator' content='Hugo 0.80.0')
     title= 'Geolocation'
-    link(rel="stylesheet", href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')    
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css', integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l', crossorigin='anonymous')
+    //- don't care about favicons or browser config
+    meta(name='theme-color' content='#563d7c')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/sticky-footer.css')
-    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous')
-
-  body
-  block content 
-  nav.navbar.navbar-expand-md.navbar-dark.bg-dark.navbar-static-top
-    a.navbar-brand(href='#') Geolocation
-    ul.navbar-nav.mr-auto 
-      li.nav-item.active 
-        a.nav-link(href='#') Home
-  div.myheader
-    h1= title
-    p Welcome to #{title}
-footer.footer.mt-auto.py-3.fixed-bottom
-  .container
-    span.text-muted Geolocation © 2021
-    
-  |
-  
+  body(class='d-flex flex-column h-100')
+    header
+      nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
+        a(class='navbar-brand', href='#') Geolocation
+        button(class='navbar-toggler', type='button', data-toggle='collapse' data-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
+          span(class='navbar-toggler-icon')
+        div(class='collapse navbar-collapse' id='navbarCollapse')
+          ul(class='navbar-nav mr-auto')
+            li(class='nav-item active')
+              a(class='nav-link' href='#') Home
+                span(class='sr-only') (current)
+    main(role='main' class='flex-shrink-0')
+      div(class='container')
+        
+        //- load page content
+        block page
+        
+    footer(class='footer mt-auto py-3')
+      div(class='container')
+        span(class='text-muted') Geolocation © 2021
+    //- load JS scripts last
+    script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
