Fix broken links from header

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,13 +14,13 @@ html(lang='en' class='h-100')
   body(class='d-flex flex-column h-100')
     header
       nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
-        a(class='navbar-brand', href='#') Geolocation
+        a(class='navbar-brand', href='/') Geolocation
         button(class='navbar-toggler', type='button', data-toggle='collapse' data-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
           span(class='navbar-toggler-icon')
         div(class='collapse navbar-collapse' id='navbarCollapse')
           ul(class='navbar-nav mr-auto')
             li(class='nav-item active')
-              a(class='nav-link' href='#') Home
+              a(class='nav-link' href='/') Home
                 span(class='sr-only') (current)
     main(role='main' class='flex-shrink-0')
       div(class='container')
