--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,10 +7,12 @@ html(lang='en' class='h-100')
     meta(name='author' content='Mark Otto, Jacob Thornton, and Bootstrap contributors')
     meta(name='generator' content='Hugo 0.80.0')
     title= 'Geolocation'
+    script(src="https://code.jquery.com/jquery-3.6.0.min.js", integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=", crossorigin="anonymous")
+    script(src="../js/form.js") 
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css', integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l', crossorigin='anonymous')
     //- don't care about favicons or browser config
     meta(name='theme-color' content='#563d7c')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='../stylesheets/style.css')
   body(class='d-flex flex-column h-100')
     header
       nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
