--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,8 +8,6 @@ html(lang='en' class='h-100')
     meta(name='generator' content='Hugo 0.80.0')
     title= 'Geolocation'
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css', integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l', crossorigin='anonymous')
-    script(src="https://code.jquery.com/jquery-3.6.0.min.js", integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=", crossorigin="anonymous")
-    script(src='/js/formValid.js') 
     //- don't care about favicons or browser config
     meta(name='theme-color' content='#563d7c')
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -29,7 +27,8 @@ html(lang='en' class='h-100')
         
         //- load page content
         block page
-        
+    script(src="https://code.jquery.com/jquery-3.6.0.min.js", integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=", crossorigin="anonymous")
+    script(src='/js/addressForm.js')         
     footer(class='footer mt-auto py-3')
       div(class='container')
         span(class='text-muted') Geolocation © 2021
