--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ block page
             input(type="text" class=(address !== undefined && address === "" ? "form-control is-invalid" : "form-control") id="address" name="address" aria-describedby="addressFeedback" value=`${address !== undefined ? address : ""}`)
             
             div(id="addressFeedback" class="invalid-feedback") Please provide an address.
+            div(id="serverFeedback" class="invalid-feedback") Please try again later.
 
         button(type="submit" class="btn btn-primary") Find
         
