--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,15 +7,15 @@ html(lang='en' class='h-100')
     meta(name='author' content='Mark Otto, Jacob Thornton, and Bootstrap contributors')
     meta(name='generator' content='Hugo 0.80.0')
     title= 'Geolocation'
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css', integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l', crossorigin='anonymous')
+    link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css' integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l' crossorigin='anonymous')
     //- don't care about favicons or browser config
     meta(name='theme-color' content='#563d7c')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet' href='/stylesheets/style.css')
   body(class='d-flex flex-column h-100')
     header
       nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
-        a(class='navbar-brand', href='/') Geolocation
-        button(class='navbar-toggler', type='button', data-toggle='collapse' data-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
+        a(class='navbar-brand' href='/') Geolocation
+        button(class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
           span(class='navbar-toggler-icon')
         div(class='collapse navbar-collapse' id='navbarCollapse')
           ul(class='navbar-nav mr-auto')
@@ -24,10 +24,10 @@ html(lang='en' class='h-100')
                 span(class='sr-only') (current)
     main(role='main' class='flex-shrink-0')
       div(class='container')
-        
+
         //- load page content
         block page
-    script(src="https://code.jquery.com/jquery-3.6.0.min.js", integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=", crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous")
     script(src='/js/addressForm.js')         
     footer(class='footer mt-auto py-3')
       div(class='container')
