--- a/views/index.pug
+++ b/views/index.pug
@@ -16,8 +16,8 @@ block page
       div(id="addressFeedback" class="invalid-feedback") Please provide an address.
       div(id="serverFeedback" class="invalid-feedback") Please try again later.
 
-    button(type="submit" class="btn btn-primary") Find  
-      span(id="loadingSpinner" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true" style="visibility:hidden")
+    button(type="submit" class="btn btn-primary") Find
+      span(id="loadingSpinner" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true" style="display:none")
       
   if result !== undefined    
     h3(class='mt-5') Result 
