--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html(lang='en' class='h-100')
             li(class='nav-item active')
               a(class='nav-link' href='/') Home
                 span(class='sr-only') (current)
-            if user
+            if name
               li(class='nav-item active')
                 a(class='nav-link' href='/users/logout') Logout            
     main(role='main' class='flex-shrink-0')
