--- a/views/login.pug
+++ b/views/login.pug
@@ -7,6 +7,6 @@ block page
     label.sr-only(for='name') Your name
     input#inputEmail.form-control(type='text' name='name' placeholder='Your name' required='' autofocus='')
     label.sr-only(for='password') Your Password
-    input#inputPassword.form-control(type='text' name='password' placeholder='Password' required='')
+    input#inputPassword.form-control(type='password' name='password' placeholder='Password' required='')
     button.btn.btn-lg.btn-primary.btn-block(type='submit' value='Log In') Sign in
 
