--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -9,4 +9,4 @@ block page
     label.sr-only(for='password') Your Password
     input#inputPassword.form-control(type='password' name='password' placeholder='Password' required='')
     button.btn.btn-lg.btn-primary.btn-block(type='submit' value='Log In') Sign in
-
+    p If you don't have an accout you can register a new one #[a(href="/users/register") here]
