--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -4,8 +4,8 @@ block page
  
   form.form-signin(method='post' action='/users/login')
     h1.h3.mb-3.font-weight-normal Please sign in
-    label.sr-only(for='name') Your name
-    input#inputEmail.form-control(type='text' name='name' placeholder='Your name' required='' autofocus='')
+    label.sr-only(for='email') Your e-mail
+    input#inputEmail.form-control(type='email' name='e-mail' placeholder='Your e-mail address' required='' autofocus='')
     label.sr-only(for='password') Your Password
     input#inputPassword.form-control(type='password' name='password' placeholder='Password' required='')
     button.btn.btn-lg.btn-primary.btn-block(type='submit' value='Log In') Sign in
