--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -9,7 +9,7 @@ block page
     label.sr-only(for='lastName') Your last name
     input#inputLastName.form-control(type='text' name='lastName' placeholder='Your last name' required='' autofocus='')
     label.sr-only(for='email') Your e-mail address 
-    input#inputEmail.form-control(type='text' name='email' placeholder='Your e-mail address' required='' autofocus='')
+    input#inputEmail.form-control(type='email' name='email' placeholder='Your e-mail address' required='' autofocus='')
     label.sr-only(for='password') Your Password
     input#inputPassword.form-control(type='password' name='password' placeholder='Password' required='')
     button.btn.btn-lg.btn-primary.btn-block(type='submit' value='register') Register
