--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -13,3 +13,6 @@ block page
     label.sr-only(for='password') Your Password
     input#inputPassword.form-control(type='password' name='password' placeholder='Password' required='')
     button.btn.btn-lg.btn-primary.btn-block(type='submit' value='register') Register
+
+    if registerError   
+      div.alert.alert-danger.mt-2(role='alert') Email already in the database or password is invalid
