--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -13,4 +13,4 @@ block page
     if loginError   
       div.alert.alert-danger.mt-2(role='alert') Invalid email or password
     
-    p If you don't have an accout you can register a new one #[a(href="/users/register") here]
+    p Sign up #[a(href="/users/register") here]
