--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -3,7 +3,7 @@ extends layout
 block page 
 
   form.form-signin(method='post' action='/users/register')
-    h1.h3.mb-3.font-weight-normal Fill in this form
+    h1.h3.mb-3.font-weight-normal Sign Up
     label.sr-only(for='firstName') Your first name
     input#inputFirstName.form-control(type='text' name='firstName' placeholder='Your first name' required='' autofocus='')
     label.sr-only(for='lastName') Your last name
@@ -15,4 +15,4 @@ block page
     button.btn.btn-lg.btn-primary.btn-block(type='submit' value='register') Register
 
     if registerError   
-      div.alert.alert-danger.mt-2(role='alert') Email already in the database or password is invalid
+      div.alert.alert-danger.mt-2(role='alert') Invalid data
