add profile page

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -24,6 +24,8 @@ html(lang='en' class='h-100')
                 span(class='sr-only') (current)
             if userId
               li(class='nav-item active')
+                a(class='nav-link' href='/users/profile') Profile 
+              li(class='nav-item active')
                 a(class='nav-link' href='/users/logout') Logout            
     main(role='main' class='flex-shrink-0')
       div(class='container')
