--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,7 +5,7 @@ block page
   form(id="addressForm" method="POST")
     div(class="form-group")
       label(for="address") Address
-      input(type="text" class=(address !== undefined && address === "" ? "form-control is-invalid" : "form-control") id="address" name="address" aria-describedby="addressFeedback" value=`${address !== undefined ? address : ""}`)
+      input(type="text" class=(address !== undefined && address === "" ? "form-control is-invalid" : "form-control") id="address" name="address" aria-describedby="addressFeedback" value=`${address !== undefined ? address : ""}` autocomplete="off")
 
       if address !== undefined && address === ""
         div(id="addressFeedback" class="invalid-feedback") Please provide an address.
@@ -18,7 +18,9 @@ block page
 
     button(type="submit" class="btn btn-primary") Find
       span(id="loadingSpinner" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true" style="display:none")
-      
+    button(id="bookmarkBtn" type="submit" class="btn btn-primary ml-1") Bookmark
+
+
   if result !== undefined    
     h3(class='mt-5') Result 
     ul(class="list-group list-group-flush")
