validate input data on address field and update bookmark button

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -18,7 +18,7 @@ block page
 
     button(type="submit" class="btn btn-primary") Find
       span(id="loadingSpinner" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true" style="display:none")
-    button(id="bookmarkBtn" type="submit" class="btn btn-primary ml-1") Bookmark
+    button(type="button" id="bookmarkBtn" class="btn btn-primary ml-1") Bookmark
 
 
   if result !== undefined    
