switch from create to findorcreate on sequelize bookmarks post route

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -28,7 +28,7 @@ block page
           button.close(type='button' data-dismiss='modal' aria-label='Close')
             span(aria-hidden='true') &times;
         .modal-body
-          p Your bookmark was added succesfully or have encountered an error
+          p(id="modalMessage") 
         .modal-footer
           button.btn.btn-secondary(type='button' data-dismiss='modal') Close
 
