--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -20,10 +20,16 @@ block page
       span(id="loadingSpinner" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true" style="display:none")
     button(type="button" id="bookmarkBtn" class="btn btn-primary ml-1" data-toggle="modal" data-target="#bookmarkModal" disabled) Bookmark
 
+  div(class="row")
+    div(id="resultsSection" class="col-6") 
 
-    button#bookmarksMenu.btn.btn-primary.dropdown-toggle.ml-1(type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-      | Bookmarks
-    .dropdown-menu(aria-labelledby='bookmarksMenu')
+    div(id="bookmarksSection" class="col-6") 
+      table(class="table")
+        thead 
+          tr 
+            th(scope="col") Bookmarks
+            th(scope="col")
+        tbody 
 
   #bookmarkModal.modal.fade(tabindex='-1' role='dialog' aria-labelledby='bookmarkModalLabel' aria-hidden='true')
     .modal-dialog(role='document')
