--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -24,12 +24,12 @@ block page
     div(id="resultsSection" class="col-6") 
 
     div(id="bookmarksSection" class="col-6") 
-      table(class="table")
+      table(class="table" id="bookmarksTable")
         thead 
           tr 
             th(scope="col") Bookmarks
             th(scope="col")
-        tbody 
+        tbody(id=("bookmarksRows")) 
 
   #bookmarkModal.modal.fade(tabindex='-1' role='dialog' aria-labelledby='bookmarkModalLabel' aria-hidden='true')
     .modal-dialog(role='document')
